# Taller-3-Robotica

taller3_grupo3/: hsv_calibrator.py  package.xml  setup.cfg  setup.py
taller3_grupo3/launch/: pc_launch.py  pi_launch.py
taller3_grupo3/taller3_grupo3/: camera_node.py  manipulator_core.py  robot_core.py  robot_fsm.py  robot_teleop.py  vision_node.py
taller3_grupo3_T3/taller3_grupo3/: hsv_calibrator.py  package.xml  setup.py
taller3_grupo3_T3/taller3_grupo3/launch/: pc_launch.py  robot_launch.py
taller3_grupo3_T3/taller3_grupo3/srv/: PlayFile.srv
taller3_grupo3_T3/taller3_grupo3/taller3_grupo3/: camera_node.py  manipulator_core.py  robot_core.py  robot_fsm.py  robot_interface.py  robot_player.py  vision_node.py
